# ntools

./: .gitignore  README.md  netif_check.c  netif_state.c
packet_analyzer/: CMakeLists.txt
packet_analyzer/config/: ids.yaml
packet_analyzer/config/rules/: local.rules
packet_analyzer/docs/: api-reference.md  architecture.md  confirm_tcp_analysis.md  implementation-plan.md  layered-architecture-design.md  module-specifications.md  tcp-rule-matching-design.md  user-guide.md
packet_analyzer/include/ids/: common.h  config.h
packet_analyzer/include/miniids/: common.h
packet_analyzer/include/parsing/: info_extractor.h  matcher.h  parser.h  protocol_parser.h  tcp.h
packet_analyzer/include/protocols/: ethernet.h  info_extractor.h  ip.h  packet.h  protocol_parser.h  tcp.h
packet_analyzer/include/rule/: matcher.h  parser.h  rule.h
packet_analyzer/include/utils/: packet_formatter.h  utils.h
packet_analyzer/src/: ids.cpp  ids.h  main.cpp
packet_analyzer/src/capture/: af_packet.cpp  af_packet.h  factory.h  interface.h
packet_analyzer/src/core/: config.h  packet.h  utils.cpp
packet_analyzer/src/packetio/: af_packet.h  factory.cpp  factory.h  interface.h
packet_analyzer/src/parsing/: info_extractor.cpp  matcher.cpp  parser.cpp  tcp.cpp
packet_analyzer/src/protocols/: ethernet.cpp  info_extractor.cpp  ip.cpp  tcp.cpp
packet_analyzer/src/rule/: matcher.cpp  parser.cpp  rule.cpp
packet_analyzer/src/utils/: packet_formatter.cpp  utils.cpp
packet_analyzer/tests/: test_capture.cpp  test_log.cpp  test_main.cpp  test_protocol.cpp  test_rule.cpp  test_rule_parser.cpp  test_tcp_comprehensive.cpp  test_tcp_parser.cpp
raw_socket/: Makefile  README.md  raw_socket_capture.c
rule2bin/: CMakeLists.txt  README.md  architecture_plan.md
rule2bin/include/: binary_deserializer.h  binary_serializer.h  rule_parser.h  structures.h
rule2bin/rules/: tcp_icmp_rules.txt
rule2bin/src/: binary_deserializer.cpp  binary_serializer.cpp  main.cpp  rule_parser.cpp  structures.cpp
